# rkdeveloptool-mingw

./: .gitignore  CMakeLists.txt  DefineHeader.h  RKBoot.cpp  RKImage.cpp  RKLog.cpp  crc.cpp  main.cpp  readme.md
